--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   background-size: 100% 50%;
   font-family: 'Red Hat Display', sans-serif;
   margin: 0;
-  padding-top: 40px;
+  padding-top: 50px;
   text-align: center;
 }
 
@@ -15,11 +15,9 @@ body {
   background-color: #f5f7ff;
   border-radius: 12px;
   color: #1b183b;
-  display: inline-block;
   font-size: 16px;
-  margin: 30px 0 20px 0;
-  padding: 10px 30px 20px 30px;
-  width: 60%;
+  margin: 0 40px;
+  padding: 20px 90px 40px 24px;
 }
 
 .btn {
@@ -48,8 +46,8 @@ body {
 
 .change {
   position: relative;
-  right: 80px;
-  top: 10px;
+  left: 55px;
+  bottom: 54px;
 }
 
 .co {
@@ -61,9 +59,9 @@ body {
   border-radius: 30px;
   background-color: white;
   font-family: 'Red Hat Display', sans-serif;
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
   padding-bottom: 20px;
-  width: 30%;
+  width: 25%;
 }
 
 .hero {
@@ -73,9 +71,9 @@ body {
 
 .music {
   position: relative;
-  top: 30px;
-  left: 60px;
-  width: 40px;
+  top: 65px;
+  right: 110px;
+  width: 35px;
 }
 
 .order-summary {
@@ -87,16 +85,16 @@ body {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.5;
-  margin: 0 auto 0 auto;
-  width: 70%;
+  margin: 0 auto;
+  width: 80%;
 }
 
 .price {
   color: #7280a7;
   display: inline-block;
-  margin: 3px 0 30px 0;
-  position: relative;
-  top: 25px;
-  right: 93px;
   font-weight: normal;
+  margin: 0;
+  position: relative;
+  bottom: 35px;
+  right: 5px;
 }
